--- a/ReactiveExtensionFundamentals/LearnReactiveExtension/packages/repositories.config
+++ b/ReactiveExtensionFundamentals/LearnReactiveExtension/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\Chapter1\packages.config" />
   <repository path="..\Chapter1Tests\packages.config" />
+  <repository path="..\WPFConcurrency\packages.config" />
 </repositories>
