--- a/ReactiveExtensionFundamentals/LearnReactiveExtension/packages/repositories.config
+++ b/ReactiveExtensionFundamentals/LearnReactiveExtension/packages/repositories.config
@@ -2,6 +2,8 @@
 <repositories>
   <repository path="..\Chapter1\packages.config" />
   <repository path="..\Chapter1Tests\packages.config" />
+  <repository path="..\Chapter2\packages.config" />
   <repository path="..\Chapter2Tests\packages.config" />
+  <repository path="..\SimpleConcurrency\packages.config" />
   <repository path="..\WPFConcurrency\packages.config" />
 </repositories>
