--- a/ReactiveExtensionFundamentals/LearnReactiveExtension/packages/repositories.config
+++ b/ReactiveExtensionFundamentals/LearnReactiveExtension/packages/repositories.config
@@ -1,9 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\BackgroundForegroundThreadDemo\packages.config" />
   <repository path="..\Chapter1\packages.config" />
   <repository path="..\Chapter1Tests\packages.config" />
   <repository path="..\Chapter2\packages.config" />
   <repository path="..\Chapter2Tests\packages.config" />
+  <repository path="..\DisposingFile\packages.config" />
   <repository path="..\SimpleConcurrency\packages.config" />
+  <repository path="..\SubscribeObserveOnThreadPool\packages.config" />
   <repository path="..\WPFConcurrency\packages.config" />
+  <repository path="..\WPFObserveWithDispatcher\packages.config" />
 </repositories>
