--- a/ReactiveExtensionFundamentals/LearnReactiveExtension/packages/repositories.config
+++ b/ReactiveExtensionFundamentals/LearnReactiveExtension/packages/repositories.config
@@ -6,6 +6,7 @@
   <repository path="..\Chapter2\packages.config" />
   <repository path="..\Chapter2Tests\packages.config" />
   <repository path="..\DisposingFile\packages.config" />
+  <repository path="..\SandBox\packages.config" />
   <repository path="..\SimpleConcurrency\packages.config" />
   <repository path="..\SubscribeObserveOnThreadPool\packages.config" />
   <repository path="..\WPFConcurrency\packages.config" />
